# persist-cache

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: bench.yml  ci.yml
src/local_cache/: __init__.py  caching.py  helpers.py  local_cache.py  serialization.py
src/persist_cache/: __init__.py  caching.py  helpers.py  persist_cache.py  pickle.py  serialization.py
tests/: bench.py  test_local_cache.py  test_persist_cache.py
